--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
-  <script src="app.js"></script> 
+  <script src="https://raw.githack.com/ahmed000832/store3/main/app.js"></script> 
   <!--I add app.js to connet with app.js file   -->
 </body>
 </html>
