--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Manipulating the DOM</title>
   <!-- Load Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:900|Merriweather&display=swap" rel="stylesheet">  <!-- Load Styles -->
-  <link href="https://raw.githack.com/ahmed000832/store3/main/styles.css" rel="stylesheet">
+  <link href="styles.css" rel="stylesheet">
 </head>
 <body>
   <!-- HTML Follows BEM naming conventions 
@@ -64,7 +64,7 @@
   <footer class="page__footer">
     <p>&copy Udacity</p>
   </footer>
-  <script src="https://raw.githack.com/ahmed000832/store3/main/app.js"></script> 
+  <script src="app.js"></script> 
   <!--I add app.js to connet with app.js file   -->
 </body>
 </html>
